# entity

./: .gitmodules  ChangeLog.md  README.md  entities.py  entity.cabal  event.ts  hie.yaml  package.yaml  stack.yaml
app/: Main.hs
diagrams/: entity.vpp
event/: models.py  views.py
examples/timeline/model_solution/timeline/: .gitignore  mypy.ini  pyproject.toml
examples/timeline/model_solution/timeline/app/: entities.py  factories.py  models.py  serializers.py  urls.py  views.py
examples/timeline/model_solution/timeline/app/migrations/: 0001_initial.py  0002_auto_20201228_1840.py
examples/timeline/model_solution/timeline/config/: settings.py  urls.py
examples/timeline/model_solution/timeline/frontend/: ionic.config.json  package-lock.json  package.json  tsconfig.json
examples/timeline/model_solution/timeline/frontend/src/app/: app-routing.module.ts
examples/timeline/model_solution/timeline/frontend/src/app/api/: event-manager.service.ts  event.ts  load-events.guard.ts
examples/timeline/model_solution/timeline/frontend/src/app/view/event-list/: event-list.page.html  event-list.page.ts
examples/timeline/model_solution/timeline/frontend/src/app/view/page-not-found/: page-not-found.page.html
src/Entity/: ComponentConfig.hs  Core.hs  Entity.hs  RefactorTest.hs  RefactoredEntity.hs  Util.hs
src/Entity/Languages/: Python.hs  TypeScript.hs
