[tool.poetry]
name = "timeline"
version = "0.1.0"
description = ""
authors = ["Simon Cockx <simon@sikanda.be>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
django-spa = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
